# roman-trt-models

./: README.md
DINOv2_TensorRT/: README.md  pyproject.toml
DINOv2_TensorRT/scripts/: infer_default.py  infer_onnx.py  infer_trt.py  onnx2trt.py  pt2onnx.py
DINOv2_TensorRT/src/dinov2_trt/: __init__.py  convert.py  model.py  utils.py
FastSAM_TensorRT/: README.md  pyproject.toml
FastSAM_TensorRT/scripts/: infer_default.py  infer_onnx.py  infer_trt.py  onnx2trt.py  pt2onnx.py
FastSAM_TensorRT/src/fastsam_trt/: __init__.py  convert.py  model.py  utils.py
ONNX_TensorRT_Tools/: README.md  pyproject.toml
ONNX_TensorRT_Tools/src/onnx_trt_tools/: __init__.py  convert.py  engine.py  preprocess.py
YOLOv8_TensorRT/: .gitignore  README.md  pyproject.toml
YOLOv8_TensorRT/scripts/: infer_default.py  infer_onnx.py  infer_trt.py  onnx2trt.py  pt2onnx.py
YOLOv8_TensorRT/src/yolov8_trt/: __init__.py  convert.py  model.py  utils.py
