[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-trt-tools"
version = "0.1.0"
description = "Shared TensorRT engine, conversion, and preprocessing utilities"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "torch",
    "onnx",
    "onnxsim",
    "tensorrt",
]

[tool.setuptools.packages.find]
where = ["src"]
